--- a/selectUI.html
+++ b/selectUI.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>radio checkbox select jQuery.component</title>
+  <title>jQuery.selectUI</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/selectUI.css">
   <script type="text/javascript" src="js/min/jquery.min.js"></script>
