--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>jQuery.selectUI</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/selectUI.css">
-  <script type="text/javascript" src="js/min/jquery.min.js"></script>
+  <script type="text/javascript" src="js/lib/jquery.js"></script>
   <script type="text/javascript" src="js/lib/selectUI.js"></script>
 </head>
 <body>
